# maya_plugins_template

./: CMakeLists.txt  README.md  blend_node.cpp  blend_node.py  doubler_node.cpp  doubler_node.py  plugin.cpp  plugin.py
plugin/: DoublerNode.cpp  DoublerNode.h
